# tok

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  NOTICE  README.md  SECURITY.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SECURITY_IMPROVEMENTS_SUMMARY.md  findings.txt  plan.txt  pyproject.toml  roadmap.md  sbom.spdx
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY_REVIEW_CHECKLIST.md  dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmark-smoke.yml  ci.yml  dependency-security-review.yml  release.yml  sbom-generation.yml  security.yml
.opencode/plans/: 0.2.0-pre-review-fixes.md
benchmarks/: README.md
benchmarks/assets/: README.md
benchmarks/execution_patch/: pilot_pack.json
benchmarks/lanes/: lanes.json
benchmarks/real_session/: pilot_pack.json
benchmarks/repo_grounding/: pilot_pack.json
config/: fixtures-feature.json  fixtures-full.json
data/: validation_dataset.json
docs/: CICD_INTEGRATION.md  agent-contract.json  agent-report-template.md  agent_quickstart.md  architecture-0.2.md  architecture-diagrams.md  architecture.md  benchmark_findings_0.1.0.md  bridge-standard.md  bridge.md  claims_matrix.md  claude-compaction-comparison.md  cli-reference.md  compression-frontier.md  diagnostics.md  internal-documentation-update-summary.md  live_smoke_matrix.md  maintainability_audit_plan13.md  philosophy.md  positioning-context-tools.md  pricing_verification.md  production-readiness.md  public-release-decision.md  release-checklist.md  repository_map.md  savings-accounting.md  small-benchmark-investigation.md  troubleshooting.md
docs/audits/: savings-metrics-audit.md
docs/internal/: discovery-safe-dedup-benchmark.md  tok-metaprompt-exploration-audit.md
docs/maintainers/: README.md
docs/spec/: README.md  tok_protocol_layers_v0_1.md  tok_resolver_manifest_v0_2.md  tok_trace_conformance_v0_1.md  tok_trace_format_v0_1.md  tok_trace_roadmap_v0_1.md  tok_trace_schema_v0_1.tok.md
examples/: README.md  final_demo.py  multi_format_demo.py  natural_first_openrouter.py  playground.py  tok_universal_demo.py  tok_wrap_example.py
private-evaluator-overlay/: README.md  exec.attrs.converter-validator-order.json  exec.click.option-precedence.json  exec.pluggy.wrapper-order.json  exec.rich.overflow-markup.json
scripts/: _project_metadata.py  _uv_lock.py  agent_smoke.sh  analyze_dependency_tree.py  capture_attribution.sh  check_attribution.py  check_dependency_age.py  check_repo_hygiene.py  divergence_analysis.py  frontier_checkpoint_runner.py  generate_bloat_report.py  generate_live_bridge_bloat_report.py  generate_spdx_sbom.py  measure_prompt_bloat.py  parse_tok_logs.py  pr-comment.py  prepare_benchmark_assets.py  run_agent_smoke.py  run_benchmark_kickoff.py  run_benchmark_smoke_matrix.py  run_live_benchmark_matrix.py  run_release_smoke.py  run_security_audit.py  security_dashboard.py  select_fixtures.py  tok_claude.sh  tok_compress_hook.py  tok_log_tail.py  tok_proxy.py  tok_trace_reader.py  verify_dependency_integrity.py  verify_release_claims.py
src/examples/: mutation_probe.py
src/tok/: __init__.py  __main__.py  bridge_memory.py  encoder.py  evidence_review.py  exceptions.py  explorer.py  fixture_generator.py  format_bridge.py  gateway.py  live_benchmark.py  live_runner.py  metrics.py  models.py  parser.py  pricing.py  prompt.py  prompt_analyzer.py  provider_optimizations.py  provider_request_shapes.py  provider_shapes.py  release_surface.py  replay_metrics.py  runtime_tools.py  savings_tracker.py  schema.py  shell_integration.py  sifter.py  smart_policy.py  stats.py  stress_harness.py  telemetry.py  tok_orchestrator.py  transformer.py  translator.py  universal_runtime.py
tests/: conftest.py
tests/benchmarks/: bench_compression.py  bench_translator.py
tests/fixtures/: conftest.py
tests/integration/: test_bridge_fidelity.py  test_freshness_signaling.py
tests/mocks/: anthropic_server.py
tests/runtime/: test_discovery_safe_dedup.py  test_repeated_read_detection.py  test_smoothness_persistence.py  test_smoothness_policy.py  test_system_block_validation_boundary.py  test_thinking_mutation_control.py
tests/smoke/: test_api_base_smoke.py  test_attribution_capability_manifest_smoke.py  test_attribution_compression_smoke.py  test_attribution_diagnostics_consistency_smoke.py  test_attribution_trace_exactness_smoke.py  test_diagnostics_consistency_smoke.py  test_exactness_preservation_smoke.py  test_fail_open_visible_smoke.py  test_live_claude_smoke_matrix.py  test_primary_non_streaming_smoke.py  test_primary_streaming_smoke.py  test_response_contract_smoke.py  test_trace_privacy_smoke.py
tests/spec/: test_live_trace.py  test_live_trace_digest_gate.py  test_live_trace_evidence_safety_digest.py  test_resolver_backed_audit.py  test_standalone_reader_agreement.py  test_tok_protocol_roadmap_docs.py  test_tok_trace_adversarial.py  test_tok_trace_audit_cli.py  test_tok_trace_fixtures.py  test_tok_trace_receipt_contract.py
tests/unit/: test_adapter_conformance.py  test_adapter_parity.py  test_adapters.py  test_advanced_compression.py  test_adversarial.py  test_agent_docs_contract.py  test_agent_operable_regression.py  test_agent_smoke_script.py  test_app_factory_helpers.py  test_architecture.py  test_batch2_reacquisition.py  test_benchmark_executor.py  test_benchmark_kickoff_script.py  test_benchmark_smoke_matrix_script.py  test_benchmark_suite.py  test_bridge_capability_manifest.py  test_bridge_fidelity.py  test_bridge_memory.py  test_bridge_memory_snapshot.py  test_bridge_orchestrator_parity.py  test_bridge_session_delegation.py  test_bridge_smoke.py  test_bridge_validation.py  test_buffer_strip_streaming_lifecycle.py  test_bug_audit_regressions.py  test_cache_control.py  test_cli.py  test_compatibility_shims.py  test_compression.py  test_compression_debug_logging.py  test_conformance.py  test_dataflow_mining.py  test_dedup_frontier.py  test_dependency_release_scripts.py  test_dev_tiny_patch_cli.py  (+122 more)
(+642 files in other folders)
