[project]
name = "tok-protocol"
version = "0.1.0"
description = "Bridge-first CLI and runtime for Claude Code that compresses conversations and exposes savings and fallback health"
authors = [
    { name = "Tok Team" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["claude-code", "bridge", "compression", "llm", "developer-tools", "tokens"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "openai>=1.0.0,<2.0.0",
    "tiktoken>=0.12.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "typer>=0.9.0,<1.0.0",
    "rich>=13.0.0,<14.0.0",
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.1",
    "hatchling>=1.25.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "hypothesis>=6.0",
    "safety>=2.0.0",
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/tokmacher/tok"
Documentation = "https://github.com/tokmacher/tok#readme"
Issues = "https://github.com/tokmacher/tok/issues"
Repository = "https://github.com/tokmacher/tok"

[project.scripts]
tok = "tok.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tok"]
exclude = ["archive/", "research/", "results/", "tests/", "scripts/", "examples/"]

[tool.hatch.build.targets.sdist]
exclude = ["archive/", ".claude/", ".hypothesis/", ".mypy_cache/", ".ruff_cache/", "dist/", "tmp/"]

[tool.ruff]
line-length = 79
[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C901"]
# Ignore style issues that don't affect functionality
# Prioritize syntax correctness and maintainability over pedantic style rules
ignore = ["E501", "E741", "N806", "E402", "N813", "B023", "N802", "F811", "F402", "B025", "N817", "I001", "N804", "E731"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"src/tok/gateway/_cache_control.py" = ["C901"]
"src/tok/gateway/_app_factory.py" = ["C901"]
"src/tok/cli/_release.py" = ["C901"]
"src/tok/cli/__init__.py" = ["F401"]
"src/tok/gateway/__init__.py" = ["F401"]
"src/tok/compression/__init__.py" = ["F401"]
"src/tok/compression/_pipeline.py" = ["C901"]
"src/tok/runtime/core.py" = ["F401"]
"src/tok/runtime/_request_preparation.py" = ["C901"]
"tests/integration/test_bridge_fidelity.py" = ["C901"]
"src/tok/testing/**" = ["C901"]
"src/tok/analysis/**" = ["C901"]
"src/tok/neuro/**" = ["C901"]
"src/tok/protocol/**" = ["C901"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

# Release surface strict checking
[[tool.mypy.overrides]]
module = [
  "tok.cli",
  "tok.gateway",
  "tok.runtime.core",
  "tok.runtime.types",
  "tok.runtime.memory.*",
  "tok.runtime.pipeline.*",
  "tok.compression",
  "tok.universal_runtime",
]
strict = true

# Experimental modules - less strict
[[tool.mypy.overrides]]
module = [
  "tok.neuro.*",
  "tok.analysis.*",
  "tok.testing.*",
  "tok.protocol.*",
  "tok.monitoring.*",
]
check_untyped_defs = true
disallow_untyped_defs = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "tok.monitoring.*"
ignore_errors = true

# Test files
[[tool.mypy.overrides]]
module = "tests.*"
check_untyped_defs = true
disallow_untyped_defs = false
warn_return_any = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = [
    "tests/unit",
    "tests/unit/test_runtime_contract.py",
    "tests/integration",
]
markers = [
    "live: tests that hit real APIs (deselect with -m 'not live')",
    "benchmark: performance benchmarks (deselect with -m 'not benchmark')",
]
addopts = "-m 'not live and not benchmark'"

[tool.coverage.run]
source = ["src/tok"]
omit = [
    "src/tok/analysis/*",
    "src/tok/monitoring/*",
    "src/tok/neuro/*",
    "src/tok/testing/*",
    "src/tok/adapters/*",
    "src/tok/cli/_dev.py",
    "src/tok/cli/_install.py",
    "src/tok/cli/_protocol_tools.py",
    "src/tok/evidence_review.py",
    "src/tok/fixture_generator.py",
    "src/tok/format_bridge.py",
    "src/tok/encoder.py",
    "src/tok/gateway.py",
    "src/tok/gateway/__main__.py",
    "src/tok/gateway/pricing.py",
    "src/tok/gateway/stats.py",
    "src/tok/gateway/telemetry.py",
    "src/tok/gateway/utils.py",
    "src/tok/live_benchmark.py",
    "src/tok/live_runner.py",
    "src/tok/parser.py",
    "src/tok/pricing.py",
    "src/tok/prompt.py",
    "src/tok/prompt_analyzer.py",
    "src/tok/protocol/*",
    "src/tok/replay_metrics.py",
    "src/tok/savings_tracker.py",
    "src/tok/schema.py",
    "src/tok/sifter.py",
    "src/tok/smart_policy.py",
    "src/tok/stress_harness.py",
    "src/tok/telemetry.py",
    "src/tok/tok_orchestrator.py",
    "src/tok/transformer.py",
    "src/tok/translator.py",
    "src/tok/utils/batch_transform.py",
    "src/tok/utils/delta.py",
    "src/tok/utils/sifter.py",
    "src/tok/utils/tok_linter.py",
    "src/tok/utils/tok_registry.py",
    "src/tok/utils/transformer.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
]
